# okql

./: Cargo.toml  README.md
cli/: Cargo.toml
cli/src/: main.rs
converter/: Cargo.toml
converter-wasm/: Cargo.toml  kql_to_sql.wit
converter-wasm/src/: lib.rs
converter/src/: direct.rs  ktos.rs  lib.rs  merge.rs  merger.rs
converter/tests/: blackbox.rs  simple.kql
converter/tests/conversions/: double_project.kql  double_project.sql  extend.kql  extend.sql  limit.kql  limit.sql  project_where_project.kql  project_where_project.sql  simple.sql
demo/: README.md  test_server.py
demo/static/: index.html  intrinsics.js  kql-to-sql.d.ts  kql-to-sql.js  main.js  styles.css
kql-parser/: Cargo.toml
kql-parser/src/: lexer.rs  lib.rs  spans.rs
kql-parser/src/ast/: expression.rs  mod.rs  query.rs
kql-parser/src/parser/: expression.rs  mod.rs  query.rs
sql-emitter/: Cargo.toml
sql-emitter/src/: ast.rs  lib.rs
